# amica

./: .editorconfig  .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REPRODUCING.md  SECURITY.md  implementation_plan.md  noxfile.py  package_review.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
amica/: __init__.py  accumulators.py  backend.py  binary.py  config.py  mne_integration.py  multimodel.py  solver.py  updates.py
amica_python/: __init__.py  accumulators.py  backend.py  binary.py  config.py  likelihood.py  metrics.py  mne_integration.py  multimodel.py  pdf.py  preprocessing.py  selector.py  solver.py  updates.py  viz.py
benchmark/: README.md
changes/: template.md
docs/: Makefile  api.rst  conf.py  examples.md  explanation.md  faq.md  index.md
examples/: 01_mne_integration.py  02_pure_jax_fitting.py  03_mne_sample_demo.py  README.md  README.rst  amica_eegbci_demo.ipynb
ideas/: gpu_oom_preprocessing_fix.md
mne_amica/: __init__.py  config.py  mne_integration.py  solver.py
paper_reproduction/: .gitattributes  .gitignore  Makefile  README.md  environment.yaml  pyproject.toml
paper_reproduction/conf/: datasets.yaml  narval.env  paths.py
paper_reproduction/fortran/: Dockerfile  README.md  amica17_patched.f90  build.sh  mkl_stubs.f90  mkl_vml.f90
paper_reproduction/results/: README.md  cpu_chunking_benchmark.json  quick_check_results_combo.json  quick_check_results_dual_t0.85.json  quick_check_results_pseudo.json
paper_reproduction/results/benchmark_report/: mne_cpu_seed0_chunkfull_n120.json  mne_cpu_seed0_chunkfull_n30.json  mne_cpu_seed0_chunkfull_n60.json  mne_gpu_seed0_chunkfull_n120.json  mne_gpu_seed0_chunkfull_n30.json  mne_gpu_seed0_chunkfull_n60.json
paper_reproduction/results/comparison/: amica_python_jax_result.json  amica_python_jax_seed0_result.json  amica_python_jax_seed1_result.json  amica_python_jax_seed2_result.json  amica_python_numpy_result.json  amica_python_numpy_seed0_result.json  amica_python_numpy_seed1_result.json  amica_python_numpy_seed2_result.json  pyamica_torch_result.json  scott_huberty_torch_result.json  scott_huberty_torch_seed0_result.json  scott_huberty_torch_seed1_result.json  scott_huberty_torch_seed2_result.json  three_implementation_perf.json
paper_reproduction/results/comparison/multisubject_2026_05_03_dual/: benchmark_combined_dual.json  benchmark_sub-01_hp1.0hz_dual.json  benchmark_sub-02_hp1.0hz_dual.json  benchmark_sub-03_hp1.0hz_dual.json  benchmark_sub-04_hp1.0hz_dual.json  benchmark_sub-05_hp1.0hz_dual.json  benchmark_sub-06_hp1.0hz_dual.json  benchmark_sub-07_hp1.0hz_dual.json  benchmark_sub-08_hp1.0hz_dual.json
paper_reproduction/results/comparison/multisubject_2026_05_03_none/: benchmark_combined.json  benchmark_sub-01_hp1.0hz.json  benchmark_sub-02_hp1.0hz.json  benchmark_sub-03_hp1.0hz.json  benchmark_sub-04_hp1.0hz.json  benchmark_sub-05_hp1.0hz.json  benchmark_sub-06_hp1.0hz.json  benchmark_sub-07_hp1.0hz.json  benchmark_sub-08_hp1.0hz.json
paper_reproduction/results/eeglab_amica/amicaout/: out.txt
paper_reproduction/results/parity/: PARITY_REPORT.md  three_way_parity.json
paper_reproduction/results/parity/l1_diagnosis/: L1_DIAGNOSIS.json  L1_DIAGNOSIS.md
paper_reproduction/results/post_f1_audit/fortran_output/: out.txt
paper_reproduction/scripts/: run_eeglab_amica.m  summarize.py
paper_reproduction/scripts/comparison/: aggregate_comparator_pilot.py  compare_20iter.py  plot_comparator_pilot.py  run_highdens_v2_studnicki_compare.py  run_highdens_validation.py  run_validation.py  test_clean_eeg.py  three_implementation_perf.py
paper_reproduction/scripts/comparison/runners/: run_amica_python.py  run_scott_huberty.py
paper_reproduction/scripts/paper/: README.md  aggregate.py  generate_paper_tables.py  generate_publication_figures.py  plot_topos_v2.py  quick_topos.py  run_paper_pipeline.py
paper_reproduction/scripts/parity/: datasets.py  diagnose_l1_sphering.py  metrics.py  test_fortran_sphere.py  test_matlab_parity.py  test_presphered.py  three_way_parity.py  validate_parity.py
paper_reproduction/scripts/parity/adapters/: __init__.py  amica_python_adapter.py  base.py  fortran_adapter.py  pyamica_adapter.py
paper_reproduction/scripts/performance/: benchmark_chunking.py  benchmark_report.py  profile_cpu.py  validate_chunking_mne.py
paper_reproduction/scripts/real_eeg/: audit_post_f1_direct.py  quick_full_check.py  test_fix_init.py  test_mne_endtoend.py
paper_reproduction/scripts/sensitivity/: preprocessing_studnicki.py  run_rejection_ablation.py
paper_reproduction/slurm/comparison/: submit_compare_20iter_cpu.sh  submit_compare_20iter_gpu.sh  submit_full_validation.sh  submit_full_validation_gpu.sh  submit_validation.sh
paper_reproduction/slurm/paper/: plot_eeglab_style.sh  submit_eeglab_amica.sh  submit_topos_v2.sh
paper_reproduction/slurm/parity/: submit_final_parity.sh  submit_fixture_parity.sh  submit_fortran17_sub01.sh  submit_fortran_sub01.sh  submit_parity_cpu.sh  submit_test_fix_init.sh  submit_test_presphered_cpu.sh  submit_test_sphere.sh  submit_test_sphere_cpu.sh  submit_three_way.sh
paper_reproduction/slurm/performance/: submit_benchmark.sh  submit_benchmark_chunking.sh  submit_benchmark_gpu.sh  submit_benchmark_report_cpu.sh  submit_benchmark_report_gpu.sh  submit_profile_cpu.sh
paper_reproduction/slurm/real_eeg/: submit_audit_post_f1.sh  submit_chunking_mne.sh  submit_clean_eeg.sh  submit_mne_endtoend.sh
paper_reproduction/slurm/templates/: array_job.sbatch  cpu_job.sbatch  gpu_job.sbatch
py_amica/: __init__.py  backend.py  config.py  likelihood.py  mne_integration.py  multimodel.py  pdf.py  preprocessing.py  solver.py
tests/: TODO.md  conftest.py  test_accumulators.py  test_amica.py  test_backend.py  test_benchmark_metrics.py  test_config.py  test_fortran_density_parity.py  test_fortran_parity_io.py  test_likelihood.py  test_metrics.py  test_mne_integration.py  test_mne_real.py  test_multimodel.py  test_paper_figures.py  test_pdf.py  (+5 more)
(+247 files in other folders)
